# ppaass-agent-ui-windows

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  styles.css
.fleet/: run.json
common/: Cargo.toml
common/src/: error.rs  event.rs  lib.rs  payload.rs
model/: Cargo.toml
model/src/: lib.rs  model.rs
src/: MainUI.vue  app.rs  bo.rs  callbacks.rs  global.css  main.rs  main.ts  styles.css  wasm_binding.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/log/: ppaass-agent.2024-03-27
src-tauri/resources/: config.toml
src-tauri/src/: error.rs  main.rs  signal.rs  vo.rs
src/backend/: argument.rs  event.rs  mod.rs  payload.rs
src/bo/: command.rs  mod.rs  ui_state.rs
src/components/: Button.vue  Container.vue  InputField.vue  LoggingArea.vue  NetworkChart.vue  NetworkInfo.vue  SystemStatus.vue  mod.rs
src/components/backend_event/: mod.rs
src/components/button/: button.css  mod.rs
src/components/container/: container.css  mod.rs
src/components/input_field/: input_field.css  mod.rs
src/components/network_bar/: mod.rs  network_bar.css
src/components/network_chart/: echarts_vo.rs  mod.rs  network_chart.css
src/components/network_info/: echarts_binding.rs  echarts_vo.rs  mod.rs  network_info.css
src/vo/: AgentServerConfiguration.ts  AgentServerEvent.ts  AgentServerEventLevel.ts  AgentServerEventType.ts  AgentServerEventWrapper.ts  NetworkState.ts
