[package]
name = "ppaass-agent-ui-windows-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlButtonElement","HtmlDivElement", "HtmlSpanElement"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
stylist = { version = "0.13", features = ["yew_integration", "macros", "yew", "parser"] }
gloo = { version = "0.11", features = ["console","events"] }
serde_json = "1.0"
derive_more="0.99"
ppaass-agent-ui-model = {path = "model", package = "ppaass-agent-ui-model"}

[workspace]
members = [ "model", "src-tauri"]
