[package]
name = "ppaass-agent-ui-windows-common-lib"
version = "0.0.0"
description = "Ppaass Agent Ui - Common library"
authors = ["Qu Hao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
derive_more="0.99"
serde={version = "1", features = ["derive"]}
thiserror = "1"
tauri = "1.6"
ppaass-agent = "0.1.27"