[package]
name = "ppaass-agent-ui-model"
version = "0.0.0"
description = "Ppaass Agent Ui - Model Object"
authors = ["Qu Hao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde={version = "1", features = ["derive"]}
thiserror = "1"
ppaass-protocol = "0.1"