[package]
name = "ppaass-agent-ui-windows"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ppaass-agent = "0.1.11"
clap = "4.5"
thiserror = "1.0"
log = "0.4.21"
tokio = "1.36.0"
derive_more = "0.99.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "json"] }
tracing-appender = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
