[package]
name = "ppaass-agent-ui-windows"
version = "0.0.0"
description = "The ppaass agent ui for Windows system"
authors = ["Qu Hao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ppaass-agent = "0"
ppaass-protocol = "0"
clap = "4"
thiserror = "1"
tokio = "1"
derive_more = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["chrono", "json"] }
tracing-appender = "0"
anyhow = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
